# Linux-FlightsAPI

./: .gitignore  CMakeLists.txt  FlightsProject.drawio  LICENSE.md  README.md  closeEverything.sh  dbRunMe.sh  dockerfile.DB  dockerfile.flights  flightScanner.sh  flightsRunMe.sh  imageBuild.sh  init.sh  makefile  reRun.out  readme.txt  zip.cpp
flightsDB/EGGW/: EGGW.arv  EGGW.dst
flightsDB/EGKK/: EGKK.arv  EGKK.dst
flightsDB/EGLL/: EGLL.arv  EGLL.dst
flightsDB/LLBG/: LLBG.arv  LLBG.dst
lib/: FlightsService.cpp  airplane.cpp  airplane.h  airplane.hpp  arrivals.cpp  arrivals.h  arrivals.hpp  dbService.cpp  flightTracker.cpp  full_schedule.cpp  full_schedule.h  full_schedule.hpp  reRun.cpp
lib/dlib/: DButility.cpp  DButility.h  airplane.cpp  airplane.h  arrivals.cpp  flight.cpp  full_schedule.cpp  reRun.cpp  reRun.h
lib/flib/: flightsUtility.cpp  flightsUtility.h
lib/slib/: airplane.cpp  airplane.h  airport.cpp  airport.h  airport.hpp  arrivals.cpp  arrivals.h  flight.cpp  flight.h  flight.hpp  flightDB.cpp  flightDB.h  flightDB.hpp  full_schedule.cpp  full_schedule.h  reRun.cpp  reRun.h  utility.cpp  utility.h  utility.hpp
scriptsCPP/: airplane  airplane.cpp  airport.cpp  airport.h  arrivals.cpp  flight.cpp  flight.h  flightDB.h  full_schedule.cpp  utility.h
